--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link href="index.css" rel="stylesheet" /> 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -14,12 +15,9 @@
     <link href="index.css" rel="stylesheet" /> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Practica</title>
+    <title>Social Network EPCC</title>
     
   </head>
-  <body style="background-color:rgb(244, 250, 255)">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-
+  <body id="root" style="background-color:rgb(244, 250, 255)">
   </body>
 </html>
